# traja

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION  README.md  README.rst  codecov.yml  contributing.rst  demo.ipynb  dvc.py  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements.txt  setup.cfg  setup.py  traja-gui.py
.github/workflows/: tests.yaml
docs/: Dockerfile  environment.yml  requirements.txt
docs/examples/: 2_plot_grid.py  animate.py  comparing.py  grid_visualiations.py  plot_3d.py  plot_animate.py  plot_autocorrelation.py  plot_average_direction.py  plot_collection.py  plot_comparing.py  plot_grid.py  plot_pca.py  plot_periodogram.py  plot_predictions.py  plot_with_traja.py  plotting_with_traja.py  rinterace.py  rnn_prediction.py
docs/neuralnets/: train_lstm.py
docs/source/: calculations.rst  clustering.rst  collections.rst  conf.py  contributing.rst  deep_learning.rst  generate.rst  grid_cell.rst  index.rst  install.rst  modules.rst  pandas.rst  periodicity.rst  plots.rst  predictions.rst  reading.rst  readme_link.rst  rediscretize.rst  reference.rst  rinterface.rst  support.rst  traja.contrib.rst  traja.rst  turns.rst
docs/source/_static/: ltraj_plot
docs/source/_templates/: autosummary.rst
docs/source/auto_examples/: index.rst
docs/source/gallery/: index.rst  plotting_with_traja.ipynb  plotting_with_traja.py  plotting_with_traja.py.md5  plotting_with_traja.rst  plotting_with_traja_codeobj.pickle  searchindex.db
docs/source/reference/: traja.DataFrame.examples  traja.TrajaDataFrame.examples  traja.generate.examples  traja.utils.distance.examples
examples/: README.md  README.txt  deep_learning_demo.ipynb
paper/: paper.bib  paper.md
requirements/: dev.txt  docs.txt  extra.txt
traja/: R.py  Rtesting.py  __init__.py  accessor.py  core.py  frame.py  io.py  main.py  nn.py  parsers.py  plotting.py  rutils.py  trajadataframe.py  trajectory.py  utils.py  version.py
traja/contrib/: __init__.py  dvc.py  rdp.py
traja/data/: loader.py
traja/dataset/: __init__.py  dataset.py  example.py  generator.py  geolife.py  pedestrian.py  pituitary_gland.py
traja/dataset/CSVs/: Elk_in_southwestern_Alberta.csv
traja/datasets/: __init__.py  dataset.py  utils.py
traja/dimensionality_reduction/: visualizer.py
traja/models/: __init__.py  ae.py  experiment.py  generator.py  inference.py  interpretor.py  irl.py  losses.py  lstm.py  manifold.py  manifolds.py  nn.py  optimizers.py  optimizers.py.09b1d3e7d7591b567ec56016b6fae274.tmp  test.py  train.py  train_BACKUP_59748.py  train_REMOTE_59748.py  utils.py  vae.py  vaegan.py  visualizer.py
traja/models/base_models/: MLPClassifier.py  MLPRegressor.py
traja/models/generative_models/: vae.py  vaegan.py
traja/models/predictive_models/: ae.py  irl.py  lstm.py
traja/stats/: brownian.py
traja/test/test_data/: 3527.csv
traja/tests/: broken_test_rutils.py  test_accessor.py  test_dataset.py  test_dataset_generator.py  test_examples.py  test_losses.py  test_models.py  test_nn.py  test_optimizers.py  test_parsers.py  test_plotting.py  test_rutils.py  test_stats.py  test_trajadataframe.py  test_trajectory.py  test_trajectory_pytest.py
traja/tests/data/: 3527.csv
